# BlackShip

./: .gitignore  README.md  bataille-navale.c
BlackShip/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BlackShip/BlackShip/source/: principal.c  serveur.c
BlackShip/entete/: jeu.h
BlackShip/executables/: Blackship
BlackShip/header/: color.h  game.h  network.h
BlackShip/source/: CMakeLists.txt  client.c  debugc.c  principal.c  serveur.c  solo.c
BlackShip/source/jeu/: jeu-E-S.c  jeu-affichage.c  jeu-controleur.c
BlackShip/src/: CMakeLists.txt  Makefile  client.c  cmake_install.cmake  couleur.h  game.c  network.c  return.c  server.c  tmp.c
BlackShip/src/entetes/: reseau.h
BlackShip/src/exemple/: server.c  tmp.c
BlackShip/src/fonctions/: reseau.c
sandbox/: CMakeLists.txt  fichier.txt
sandbox/Client/Client/: CMakeLists.txt
sandbox/Serveur/Serveur/: CMakeLists.txt
sandbox/Serveur/bataille-navale/src/: server.c
